# algo-3-sem

./: .gitignore  CMakeLists.txt  Folder.DotSettings  README.md
1-A-find-substring/: CMakeLists.txt  main.cpp
1-B1-min-str-by-prefix-func/: CMakeLists.txt  main.cpp
1-B2-min-str-by-z-func/: CMakeLists.txt  main.cpp
1-B3-prefix-by-z/: CMakeLists.txt  ConvertZFuncToPrefixFunc.cpp  ConvertZFuncToPrefixFunc.hpp  main.cpp  tests.cpp
1-C-template-with-q/: CMakeLists.txt  main.cpp
2-A-number-of-substrings/: CMakeLists.txt  main.cpp
2-C-kth-common-substring/: CMakeLists.txt  main.cpp
3-A-distance/: CMakeLists.txt  main.cpp
3-B-convex-hull/: CMakeLists.txt  main.cpp
3-C-minkowski/: CMakeLists.txt  main.cpp
3-D-voronoi/: CMakeLists.txt  main.cpp
4-A-big-integer/: CMakeLists.txt  ab.cpp  biginteger.h  main.cpp
4-B-fft/.ipynb_checkpoints/: FFT-checkpoint.ipynb
